--- a/tags.html
+++ b/tags.html
@@ -6,7 +6,7 @@ description: "An archive of posts sorted by tag."
 
 {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
 <!-- site_tags: {{ site_tags }} -->
-{% assign tag_words = site_tags | split:',' | sort %}
+{% assign tag_words = site_tags | split:',' | sort:'downcase' %}
 <!-- tag_words: {{ tag_words }} -->
 
 <div id="tags">
