feature(post): New post visual novel with godot 4

--- a/playthings.html
+++ b/playthings.html
@@ -7,5 +7,6 @@ description: "Links to playthings"
   <ul>
     <li><a href="https://ksami.github.io/shooter/">AI Shooter</a></li>
     <li><a href="https://ksami.github.io/morse-translator/">Morse Code Tapping Translator</a></li>
+    <li><a href="https://ksami.itch.io/the-nobody">Visual Novel</a></li>
   </ul>
 </div>
